<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FinalProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Favorites">fav</string>
    <string name="Markets">markets</string>
    <string name="News">news</string>
    <string name="User">user</string>
    <string name="sym">sym</string>
    <string name="exchange">Exchange</string>
    <string name="crypto">Crypto</string>
    <string name="fav" />
    <string name="fav_button">fav_button</string>
    <string name="favourite_button">fav button</string>
    <string name="starred">STARRED</string>
    <string name="star">STAR</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="login">LOGIN</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="string_search" />
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
        <string name="already_registered">Already registered</string>
    <string name="login_here">Login here</string>
    <string name="emailuser">Email</string>
    <string name="passworduser">Password</string>
    <string name="loginuser">Login</string>
    <string name="not_registered_as_yet">Not registered yet</string>
    <string name="please_register_here">Register here</string>
    <string name="logout">Logout</string>
    <string name="googlbutton">x</string>
    <string name="search">Search</string>
    <string name="search_news">Search News</string>
    <string name="market_cap_dominance">Market Cap Dominance:</string>
    <string name="volume_change_in_24h">Volume Change in 24h:</string>
    <string name="percent_change_last_7days">Percent Change Last 7days:</string>
    <string name="percent_change_last_1h">Percent Change Last 1h:</string>
    <string name="percent_change_last_24hr">Percent Change Last 24hr:</string>
    <string name="percent_change_last_30days">Percent Change Last 30days:</string>
    <string name="usd">USD: $</string>
    <string name="switch_google_account">Switch Google Account</string>
    <string name="nameroject">FinalProject Z23538384</string>
</resources>